# FemtoLogger-python

./: .gitignore  CLAUDE.md  README.md  pyproject.toml
.github/workflows/: ci.yml
src/femtologger/: __init__.py  _logger.py  _types.py
src/femtologger/transports/: __init__.py  _telegram.py
tests/: test_integration.py  test_logger.py  test_telegram.py  test_types.py
