[project]
name = "femtologger"
dynamic = ["version"]
description = "Minimal async logger with Telegram transport"
readme = "README.md"
license = "MIT"
requires-python = ">=3.10"
authors = [{ name = "Frederic Triquet" }]
keywords = ["logging", "telegram", "async"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Typing :: Typed",
]
dependencies = ["httpx>=0.27"]

[project.urls]
Homepage = "https://github.com/frederictriquet/FemtoLogger-python"
Repository = "https://github.com/frederictriquet/FemtoLogger-python"

[build-system]
requires = ["hatchling", "hatch-vcs"]
build-backend = "hatchling.build"

[tool.hatch.version]
source = "vcs"

[tool.hatch.build.hooks.vcs]
version-file = "src/femtologger/_version.py"

[tool.hatch.build.targets.wheel]
packages = ["src/femtologger"]

[tool.pyright]
pythonVersion = "3.10"
typeCheckingMode = "strict"
include = ["src"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[dependency-groups]
dev = [
    "pyright>=1.1",
    "pytest>=8",
    "pytest-asyncio>=0.24",
    "pytest-cov>=6",
    "respx>=0.22",
]
